Fix buttons wrap

--- a/src/app/components/log-viewer/log-viewer.component.scss
+++ b/src/app/components/log-viewer/log-viewer.component.scss
@@ -27,6 +27,12 @@ button {
     width: 48px;
 }
 
+#buttons {
+    text-wrap: nowrap;
+    align-items: center;
+    margin: auto;
+}
+
 #edit {
     background-color: green;
     color: white;
